--- a/package.json
+++ b/package.json
@@ -24,5 +24,12 @@
     "scrollmonitor": "^1.2.11",
     "simplelightbox": "^2.14.1"
   },
+  "devDependencies": {
+    "@parcel/transformer-sass": "^2.6.0",
+    "buffer": "^6.0.3",
+    "parcel": "^2.6.0",
+    "parcel-reporter-clean-dist": "^1.0.4",
+    "posthtml-include": "^1.7.4"
+  },
   "browserslist": "> 0.5%, last 2 versions, not dead"
 }
